--- a/CareerExplorer.Web/Recources/Views/Vacancy/Create.uk.resx
+++ b/CareerExplorer.Web/Recources/Views/Vacancy/Create.uk.resx
@@ -123,6 +123,9 @@
   <data name="Back To List" xml:space="preserve">
     <value>До списку вакансій</value>
   </data>
+  <data name="Choose skills" xml:space="preserve">
+    <value>Виберіть необхідні навички</value>
+  </data>
   <data name="Create" xml:space="preserve">
     <value>Створити</value>
   </data>
@@ -134,6 +137,9 @@
   </data>
   <data name="Not Available" xml:space="preserve">
     <value>Неактивна</value>
+  </data>
+  <data name="Skills" xml:space="preserve">
+    <value>Навички</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Назва</value>
