--- a/CareerExplorer.Web/Recources/Views/Vacancy/Edit.en.resx
+++ b/CareerExplorer.Web/Recources/Views/Vacancy/Edit.en.resx
@@ -123,6 +123,9 @@
   <data name="Back To List" xml:space="preserve">
     <value>Back To List</value>
   </data>
+  <data name="Choose skills" xml:space="preserve">
+    <value>Choose skills</value>
+  </data>
   <data name="Description" xml:space="preserve">
     <value>Description</value>
   </data>
@@ -131,6 +134,9 @@
   </data>
   <data name="Save" xml:space="preserve">
     <value>Save</value>
+  </data>
+  <data name="Skills" xml:space="preserve">
+    <value>Skills</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Title</value>
