--- a/CareerExplorer.Web/Recources/Views/Shared/_LoginPartial.en.resx
+++ b/CareerExplorer.Web/Recources/Views/Shared/_LoginPartial.en.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Chats" xml:space="preserve">
+    <value>Chats</value>
+  </data>
+  <data name="JobSeekers" xml:space="preserve">
+    <value>JobSeekers</value>
+  </data>
   <data name="Login" xml:space="preserve">
     <value>Login</value>
   </data>
@@ -129,10 +135,16 @@
   <data name="Profile" xml:space="preserve">
     <value>Profile</value>
   </data>
+  <data name="Recruiters" xml:space="preserve">
+    <value>Recruiters</value>
+  </data>
   <data name="Register" xml:space="preserve">
     <value>Register</value>
   </data>
   <data name="Tags" xml:space="preserve">
     <value>Tags</value>
+  </data>
+  <data name="Vacancies" xml:space="preserve">
+    <value>Vacancies</value>
   </data>
 </root>
