--- a/CareerExplorer.Web/Recources/Views/Vacancy/Create.en.resx
+++ b/CareerExplorer.Web/Recources/Views/Vacancy/Create.en.resx
@@ -126,11 +126,20 @@
   <data name="Choose skills" xml:space="preserve">
     <value>Choose required skills</value>
   </data>
+  <data name="City" xml:space="preserve">
+    <value>City</value>
+  </data>
+  <data name="Country" xml:space="preserve">
+    <value>Country</value>
+  </data>
   <data name="Create" xml:space="preserve">
     <value>Create</value>
   </data>
   <data name="Description" xml:space="preserve">
     <value>Description</value>
+  </data>
+  <data name="English level" xml:space="preserve">
+    <value>English level</value>
   </data>
   <data name="Header" xml:space="preserve">
     <value>Create new vacancy</value>
@@ -138,10 +147,19 @@
   <data name="Not Available" xml:space="preserve">
     <value>Not Available</value>
   </data>
+  <data name="Salary" xml:space="preserve">
+    <value>Salary</value>
+  </data>
   <data name="Skills" xml:space="preserve">
     <value>Skills</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Title</value>
+  </data>
+  <data name="Work Location" xml:space="preserve">
+    <value>Work Location</value>
+  </data>
+  <data name="Years of Experience" xml:space="preserve">
+    <value>Years of Experience</value>
   </data>
 </root>
