--- a/CareerExplorer.Web/Recources/Views/Vacancy/Edit.uk.resx
+++ b/CareerExplorer.Web/Recources/Views/Vacancy/Edit.uk.resx
@@ -126,11 +126,23 @@
   <data name="Choose skills" xml:space="preserve">
     <value>Виберіть необхідні навички</value>
   </data>
+  <data name="City" xml:space="preserve">
+    <value>Місто</value>
+  </data>
+  <data name="Country" xml:space="preserve">
+    <value>Країна</value>
+  </data>
   <data name="Description" xml:space="preserve">
     <value>Опис</value>
   </data>
+  <data name="English level" xml:space="preserve">
+    <value>Рівень англійської</value>
+  </data>
   <data name="Not Available" xml:space="preserve">
     <value>Неактивна</value>
+  </data>
+  <data name="Salary" xml:space="preserve">
+    <value>Заробітня плата</value>
   </data>
   <data name="Save" xml:space="preserve">
     <value>Зберегти</value>
@@ -140,5 +152,8 @@
   </data>
   <data name="Title" xml:space="preserve">
     <value>Назва</value>
+  </data>
+  <data name="Work Location" xml:space="preserve">
+    <value>Місце роботи</value>
   </data>
 </root>
